--- a/public/act1/the-open-door/index.html
+++ b/public/act1/the-open-door/index.html
@@ -31,26 +31,26 @@ Goose Lucas mission statement The Open Door Terminal az group list az group list
     <meta itemprop="wordCount" content="407">
     <title>The Open Door :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/the-open-door/index.xml" rel="alternate" type="application/rss+xml" title="The Open Door :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1763902060" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763902060" defer></script>
-    <script src="/js/search-lunr.js?1763902060" defer></script>
-    <script src="/js/search.js?1763902060" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763905880" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763905880" defer></script>
+    <script src="/js/search-lunr.js?1763905880" defer></script>
+    <script src="/js/search.js?1763905880" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763902060";
+      window.relearn.index_js_url="/searchindex.en.js?1763905880";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763902060" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763902060" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763902060" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763902060" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763905880" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763905880" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763905880" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763905880" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763902060" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763902060" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763902060" rel="stylesheet">
-    <link href="/css/theme.css?1763902060" rel="stylesheet">
-    <link href="/css/format-html.css?1763902060" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763905880" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763905880" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763905880" rel="stylesheet">
+    <link href="/css/theme.css?1763905880" rel="stylesheet">
+    <link href="/css/format-html.css?1763905880" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -77,7 +77,7 @@ Goose Lucas mission statement The Open Door Terminal az group list az group list
       window.T_No_results_found = `No results found for "{0}"`;
       window.T_N_results_found = `{1} results found for "{0}"`;
       // variant stuff
-      window.relearn.themevariants = [ 'zen-dark' ];
+      window.relearn.themevariants = [ 'hhc-2025' ];
       window.relearn.customvariantname = "my-custom-variant";
       window.relearn.changeVariant = function(variant) {
         var oldVariant = document.documentElement.dataset.rThemeVariant;
@@ -165,8 +165,8 @@ Goose Lucas mission statement The Open Door Terminal az group list az group list
 
 <h1 id="the-open-door">The Open Door</h1>
 
-<p><a href="#R-image-3fb19a0f1645bb451fd1d1c4723c84c9" class="lightbox-link"><img alt="Lucas Goose" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/goose-pixel.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-3fb19a0f1645bb451fd1d1c4723c84c9"><img alt="Lucas Goose" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/goose-pixel.png"></a></p>
+<p><a href="#R-image-cd7459c4b6a17fbf459b88c492b27b40" class="lightbox-link"><img alt="Lucas Goose" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/goose-pixel.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-cd7459c4b6a17fbf459b88c492b27b40"><img alt="Lucas Goose" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/goose-pixel.png"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Help Goose Lucas in the hotel parking lot find the dangerously misconfigured Network Security Group rule that&rsquo;s allowing unrestricted internet access to sensitive ports like RDP or SSH.</p>
@@ -174,14 +174,14 @@ Goose Lucas mission statement The Open Door Terminal az group list az group list
 <blockquote>
 </blockquote>
 <h2 id="the-open-door-terminal">The Open Door Terminal</h2>
-<p><a href="#R-image-e769952f10b73b365a58a0c75a4b3ec7" class="lightbox-link"><img alt="Start" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-e769952f10b73b365a58a0c75a4b3ec7"><img alt="Start" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-1.png"></a></p>
+<p><a href="#R-image-1eef2bbef45a80f0fbe7aee6fb1d5479" class="lightbox-link"><img alt="Start" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1eef2bbef45a80f0fbe7aee6fb1d5479"><img alt="Start" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-1.png"></a></p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az group list</span></span></code></pre></div>
-<p><a href="#R-image-c7e8e4c5ff4bcc5fba96d3bcebfcffac" class="lightbox-link"><img alt="Group list" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c7e8e4c5ff4bcc5fba96d3bcebfcffac"><img alt="Group list" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-2.png"></a></p>
+<p><a href="#R-image-ab11b49831f6a944a1ba2f7e60505a59" class="lightbox-link"><img alt="Group list" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ab11b49831f6a944a1ba2f7e60505a59"><img alt="Group list" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-2.png"></a></p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az group list -o table</span></span></code></pre></div>
-<p><a href="#R-image-3cedd13b5f4258dcc959d712c5c0a170" class="lightbox-link"><img alt="Group list table" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-3cedd13b5f4258dcc959d712c5c0a170"><img alt="Group list table" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-3.png"></a></p>
+<p><a href="#R-image-065bfd700473e2e1ef5a389e25d59b37" class="lightbox-link"><img alt="Group list table" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-065bfd700473e2e1ef5a389e25d59b37"><img alt="Group list table" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-3.png"></a></p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az network nsg list -o table</span></span></code></pre></div>
 <table>
   <thead>
@@ -219,14 +219,14 @@ Goose Lucas mission statement The Open Door Terminal az group list az group list
       </tr>
   </tbody>
 </table>
-<p><a href="#R-image-b896a70c6db001f0d1c8d75024c6751a" class="lightbox-link"><img alt="NSG list" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-4.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-b896a70c6db001f0d1c8d75024c6751a"><img alt="NSG list" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-4.png"></a></p>
+<p><a href="#R-image-600b167c5e3b1bc037f52483439bad22" class="lightbox-link"><img alt="NSG list" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-4.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-600b167c5e3b1bc037f52483439bad22"><img alt="NSG list" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-4.png"></a></p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az network nsg show -o table --name nsg-web-eastus --resource-group theneighborhood-rg1</span></span></code></pre></div>
-<p><a href="#R-image-8eb805b6d7b5342a2211718a30a82f1b" class="lightbox-link"><img alt="NSG show " class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-5.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-8eb805b6d7b5342a2211718a30a82f1b"><img alt="NSG show " class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-5.png"></a></p>
+<p><a href="#R-image-080b35e275b5647ad7cf8d6f250493ae" class="lightbox-link"><img alt="NSG show " class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-5.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-080b35e275b5647ad7cf8d6f250493ae"><img alt="NSG show " class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-5.png"></a></p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az network nsg rule list --name nsg-mgmt-eastus --resource-group theneighborhood-rg2 | less</span></span></code></pre></div>
-<p><a href="#R-image-2729ea83d4846cee2f30cb6d40e96448" class="lightbox-link"><img alt="Rules list" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-6.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-2729ea83d4846cee2f30cb6d40e96448"><img alt="Rules list" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-6.png"></a></p>
+<p><a href="#R-image-eb8b7a3560a14d98c6c44e8c5bab1e66" class="lightbox-link"><img alt="Rules list" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-6.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-eb8b7a3560a14d98c6c44e8c5bab1e66"><img alt="Rules list" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-6.png"></a></p>
 <h3 id="viewing-suspect-rules">Viewing suspect rules</h3>
 <h4 id="rules-theneighborhood-rg2-_-nsg-mgmt-eastus">Rules theneighborhood-rg2 _ nsg-mgmt-eastus</h4>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az network nsg rule list  --name nsg-mgmt-eastus --resource-group theneighborhood-rg2 | less</span></span></code></pre></div>
@@ -294,8 +294,8 @@ Goose Lucas mission statement The Open Door Terminal az group list az group list
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az network nsg rule show --nsg-name nsg-production-eastus --resource-group theneighborhood-rg1 -n &lt;rulename&gt;</span></span></code></pre></div>
 <p>As I were traversing and inspecting these rules, I caught one of interest. A RDP related one:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az network nsg rule show --nsg-name nsg-production-eastus --resource-group theneighborhood-rg1 -n Allow-RDP-From-Internet</span></span></code></pre></div>
-<p><a href="#R-image-68f9e28d744a1582142b79c5b6bf9c89" class="lightbox-link"><img alt="Interesting rule" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-7.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-68f9e28d744a1582142b79c5b6bf9c89"><img alt="Interesting rule" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-7.png"></a></p>
+<p><a href="#R-image-d7a7c40a8bce81ccbddd0c1dcc642d65" class="lightbox-link"><img alt="Interesting rule" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-opendoor-7.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-d7a7c40a8bce81ccbddd0c1dcc642d65"><img alt="Interesting rule" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-opendoor-7.png"></a></p>
 <h2 id="goose-lucas-mission-debrief">Goose Lucas mission debrief</h2>
 <blockquote>
 <p>Ha! &lsquo;Properly protected&rsquo; they said. More like &lsquo;properly exposed to the entire internet&rsquo;! Good catch, amigo.</p>
@@ -379,8 +379,8 @@ Goose Lucas mission statement The Open Door Terminal az group list az group list
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1763902060" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763902060" defer></script>
-    <script src="/js/theme.js?1763902060" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763905880" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763905880" defer></script>
+    <script src="/js/theme.js?1763905880" defer></script>
   </body>
 </html>
