--- a/public/404.html
+++ b/public/404.html
@@ -17,26 +17,26 @@
     <meta itemprop="name" content="404 Page not found :: SANS Holiday Hack Challenge 2025">
     <title>404 Page not found :: SANS Holiday Hack Challenge 2025</title>
     <base href="http://localhost:1313/">
-    <link href="/css/auto-complete/auto-complete.min.css?1763901820" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763901820" defer></script>
-    <script src="/js/search-lunr.js?1763901820" defer></script>
-    <script src="/js/search.js?1763901820" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763905880" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763905880" defer></script>
+    <script src="/js/search-lunr.js?1763905880" defer></script>
+    <script src="/js/search.js?1763905880" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763901820";
+      window.relearn.index_js_url="/searchindex.en.js?1763905880";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763901820" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763901820" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763901820" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763901820" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763905880" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763905880" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763905880" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763905880" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763901820" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763901820" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763901820" rel="stylesheet">
-    <link href="/css/theme.css?1763901820" rel="stylesheet">
-    <link href="/css/format-html.css?1763901820" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763905880" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763905880" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763905880" rel="stylesheet">
+    <link href="/css/theme.css?1763905880" rel="stylesheet">
+    <link href="/css/format-html.css?1763905880" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -63,7 +63,7 @@
       window.T_No_results_found = `No results found for "{0}"`;
       window.T_N_results_found = `{1} results found for "{0}"`;
       // variant stuff
-      window.relearn.themevariants = [ 'zen-dark' ];
+      window.relearn.themevariants = [ 'hhc-2025' ];
       window.relearn.customvariantname = "my-custom-variant";
       window.relearn.changeVariant = function(variant) {
         var oldVariant = document.documentElement.dataset.rThemeVariant;
@@ -170,8 +170,8 @@ m-2850 -536 c56 -270 324 -461 595 -424 205 28 393 204 439 411 6 30 14 58 18
         </div>
       </main>
     </div>
-    <script src="/js/clipboard/clipboard.min.js?1763901820" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763901820" defer></script>
-    <script src="/js/theme.js?1763901820" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763905880" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763905880" defer></script>
+    <script src="/js/theme.js?1763905880" defer></script>
   </body>
 </html>
