--- a/public/act1/index.html
+++ b/public/act1/index.html
@@ -23,26 +23,26 @@
     <meta itemprop="wordCount" content="55">
     <title>Act 1 :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/index.xml" rel="alternate" type="application/rss+xml" title="Act 1 :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1763902060" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763902060" defer></script>
-    <script src="/js/search-lunr.js?1763902060" defer></script>
-    <script src="/js/search.js?1763902060" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763905880" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763905880" defer></script>
+    <script src="/js/search-lunr.js?1763905880" defer></script>
+    <script src="/js/search.js?1763905880" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763902060";
+      window.relearn.index_js_url="/searchindex.en.js?1763905880";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763902060" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763902060" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763902060" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763902060" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763905880" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763905880" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763905880" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763905880" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763902060" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763902060" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763902060" rel="stylesheet">
-    <link href="/css/theme.css?1763902060" rel="stylesheet">
-    <link href="/css/format-html.css?1763902060" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763905880" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763905880" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763905880" rel="stylesheet">
+    <link href="/css/theme.css?1763905880" rel="stylesheet">
+    <link href="/css/format-html.css?1763905880" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -69,7 +69,7 @@
       window.T_No_results_found = `No results found for "{0}"`;
       window.T_N_results_found = `{1} results found for "{0}"`;
       // variant stuff
-      window.relearn.themevariants = [ 'zen-dark' ];
+      window.relearn.themevariants = [ 'hhc-2025' ];
       window.relearn.customvariantname = "my-custom-variant";
       window.relearn.changeVariant = function(variant) {
         var oldVariant = document.documentElement.dataset.rThemeVariant;
@@ -227,8 +227,8 @@
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1763902060" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763902060" defer></script>
-    <script src="/js/theme.js?1763902060" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763905880" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763905880" defer></script>
+    <script src="/js/theme.js?1763905880" defer></script>
   </body>
 </html>
