--- a/public/act1/intro-to-nmap/index.html
+++ b/public/act1/intro-to-nmap/index.html
@@ -35,26 +35,26 @@ I enjoy being creative and making things. For example, a cybersecurity tool call
     <meta itemprop="wordCount" content="554">
     <title>Intro to Nmap :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/intro-to-nmap/index.xml" rel="alternate" type="application/rss+xml" title="Intro to Nmap :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1763902060" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763902060" defer></script>
-    <script src="/js/search-lunr.js?1763902060" defer></script>
-    <script src="/js/search.js?1763902060" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763905880" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763905880" defer></script>
+    <script src="/js/search-lunr.js?1763905880" defer></script>
+    <script src="/js/search.js?1763905880" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763902060";
+      window.relearn.index_js_url="/searchindex.en.js?1763905880";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763902060" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763902060" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763902060" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763902060" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763905880" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763905880" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763905880" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763905880" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763902060" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763902060" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763902060" rel="stylesheet">
-    <link href="/css/theme.css?1763902060" rel="stylesheet">
-    <link href="/css/format-html.css?1763902060" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763905880" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763905880" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763905880" rel="stylesheet">
+    <link href="/css/theme.css?1763905880" rel="stylesheet">
+    <link href="/css/format-html.css?1763905880" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -81,7 +81,7 @@ I enjoy being creative and making things. For example, a cybersecurity tool call
       window.T_No_results_found = `No results found for "{0}"`;
       window.T_N_results_found = `{1} results found for "{0}"`;
       // variant stuff
-      window.relearn.themevariants = [ 'zen-dark' ];
+      window.relearn.themevariants = [ 'hhc-2025' ];
       window.relearn.customvariantname = "my-custom-variant";
       window.relearn.changeVariant = function(variant) {
         var oldVariant = document.documentElement.dataset.rThemeVariant;
@@ -173,8 +173,8 @@ I enjoy being creative and making things. For example, a cybersecurity tool call
 
 <h1 id="intro-to-nmap">Intro to Nmap</h1>
 
-<p><a href="#R-image-3914ca771fc26d77dc1a834d4bcbdf31" class="lightbox-link"><img alt="Eric Pursley" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/ericpursley-avatar.gif" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-3914ca771fc26d77dc1a834d4bcbdf31"><img alt="Eric Pursley" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/ericpursley-avatar.gif"></a></p>
+<p><a href="#R-image-617040f43c3ffe98e84a63c8b61886f0" class="lightbox-link"><img alt="Eric Pursley" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/ericpursley-avatar.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-617040f43c3ffe98e84a63c8b61886f0"><img alt="Eric Pursley" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/ericpursley-avatar.gif"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Meet Eric in the hotel parking lot for Nmap know-how and scanning secrets. Help him connect to the wardriving rig on his motorcycle!</p>
@@ -192,8 +192,8 @@ I enjoy being creative and making things. For example, a cybersecurity tool call
 </blockquote>
 <h2 id="intro-top-nmap-terminal">Intro top Nmap terminal</h2>
 <p>This terminal starts with a simple welcome screen:</p>
-<p><a href="#R-image-e0617128b0fe484918aae5f166d1aabc" class="lightbox-link"><img alt="Introduction screen" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-e0617128b0fe484918aae5f166d1aabc"><img alt="Introduction screen" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-1.png"></a></p>
+<p><a href="#R-image-924ced298236b056e90ae20567e12b89" class="lightbox-link"><img alt="Introduction screen" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-924ced298236b056e90ae20567e12b89"><img alt="Introduction screen" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-1.png"></a></p>
 <h3 id="task-1---scan-top-1000-ports">Task 1 - scan top 1000 ports</h3>
 <blockquote>
 <p>When run without any options, nmap performs a TCP port scan of the top 1000 ports. Run a default scan of <code>127.0.12.25</code> and see which port is open.</p>
@@ -201,11 +201,11 @@ I enjoy being creative and making things. For example, a cybersecurity tool call
 <p>For this we use just use the following command:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>nmap 127.0.12.25</span></span></code></pre></div>
 <p><em>Task 1 screen</em>:
-<a href="#R-image-28544f921e5d95cbbd3e30158b53ee79" class="lightbox-link"><img alt="Scan top 1000 ports" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-28544f921e5d95cbbd3e30158b53ee79"><img alt="Scan top 1000 ports" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-2.png"></a></p>
+<a href="#R-image-0bc6903d7eddcbd3e404f966edeff9f8" class="lightbox-link"><img alt="Scan top 1000 ports" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-0bc6903d7eddcbd3e404f966edeff9f8"><img alt="Scan top 1000 ports" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-2.png"></a></p>
 <p><em>Task 1 results</em>:
-<a href="#R-image-5e84b311cc2e000dea76b463cac5b45f" class="lightbox-link"><img alt="Result scan top 1000 ports" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5e84b311cc2e000dea76b463cac5b45f"><img alt="Result scan top 1000 ports" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-3.png"></a></p>
+<a href="#R-image-fce13ab73894f7e94c93519e0e8fe415" class="lightbox-link"><img alt="Result scan top 1000 ports" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-fce13ab73894f7e94c93519e0e8fe415"><img alt="Result scan top 1000 ports" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-3.png"></a></p>
 <p>The scan revealed that port <code>TCP/8080</code> is open.</p>
 <h3 id="task-2---scan-all-ports">Task 2 - Scan all ports</h3>
 <blockquote>
@@ -214,8 +214,8 @@ I enjoy being creative and making things. For example, a cybersecurity tool call
 <p>If we use the ports switch for namep, <code>-p</code>, and add a <code>-</code>, we instruct Nmap to scan all ports. The command will then be:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>nmap -p- 127.0.12.25</span></span></code></pre></div>
 <p><em>Scan results:</em>
-<a href="#R-image-f6ac640fc556980e032a17187c74c1c8" class="lightbox-link"><img alt="Scan all ports" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-4.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f6ac640fc556980e032a17187c74c1c8"><img alt="Scan all ports" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-4.png"></a></p>
+<a href="#R-image-fa7879841acedd18f2c1546c361655d8" class="lightbox-link"><img alt="Scan all ports" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-4.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-fa7879841acedd18f2c1546c361655d8"><img alt="Scan all ports" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-4.png"></a></p>
 <h3 id="task-3---scan-a-range">Task 3 - Scan a range</h3>
 <blockquote>
 <p>Nmap can also scan a range of IP addresses- Scan the range 127.0.12.20 - 127.0.12.28 and see which has a port open.</p>
@@ -223,8 +223,8 @@ I enjoy being creative and making things. For example, a cybersecurity tool call
 <p>To scan a range we can define a range like so, using the scan all ports option in addition:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>nmap -p- 127.0.12-20-28</span></span></code></pre></div>
 <p><em>Scan results:</em>
-<a href="#R-image-4aacbe27ba2c08c322242e2e89e7b300" class="lightbox-link"><img alt="Scan a range " class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-5.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4aacbe27ba2c08c322242e2e89e7b300"><img alt="Scan a range " class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-5.png"></a></p>
+<a href="#R-image-d86cf095adccb54306f892b1746a46e7" class="lightbox-link"><img alt="Scan a range " class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-5.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-d86cf095adccb54306f892b1746a46e7"><img alt="Scan a range " class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-5.png"></a></p>
 <h3 id="task-4---version-scanning">Task 4 - Version scanning</h3>
 <blockquote>
 <p>Namp has a version detection engine, to help determine waht services are running on a given port. What services is running on 127.0.12.25?</p>
@@ -232,16 +232,16 @@ I enjoy being creative and making things. For example, a cybersecurity tool call
 <p>The service version scan option is called <code>-sV</code>, we can use it like so:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>nmap -p <span style="color:#ae81ff">8080</span> -sV 127.0.12.25</span></span></code></pre></div>
 <p><em>Results version scanning:</em>
-<a href="#R-image-11061a83d56a726e36cde53156f7667a" class="lightbox-link"><img alt="Version scanning" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-6.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-11061a83d56a726e36cde53156f7667a"><img alt="Version scanning" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-6.png"></a></p>
+<a href="#R-image-dba95aa8d9bdd8f6dd80800024c58098" class="lightbox-link"><img alt="Version scanning" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-6.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-dba95aa8d9bdd8f6dd80800024c58098"><img alt="Version scanning" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-6.png"></a></p>
 <h3 id="task-5---interacting-with-a-port">Task 5 - interacting with a port</h3>
 <blockquote>
 <p>Sometimes you want to interact with a port. which is a perfect job for Netcat! Use the ncat tool to connect to TCP port 240601 on 127.0.12.25 and view the banner returned</p>
 </blockquote>
 <p>Ncat is a common tool we often use in pentests and threat hunting. Its standard use follows this format <code>nc &lt;ip&gt; &lt;port&gt;</code>, it defaults to use <code>TCP</code>. We use the following command:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>nc 127.0.12.25 24601hug</span></span></code></pre></div>
-<p><a href="#R-image-43ca812bfd79e8c41ddaed14d3dcf36a" class="lightbox-link"><img alt="Interacting with a port" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-7.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-43ca812bfd79e8c41ddaed14d3dcf36a"><img alt="Interacting with a port" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-7.png"></a></p>
+<p><a href="#R-image-7b5255e4e457c67b8e8f40a1e814f651" class="lightbox-link"><img alt="Interacting with a port" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-7.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-7b5255e4e457c67b8e8f40a1e814f651"><img alt="Interacting with a port" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-intro-to-nmap-7.png"></a></p>
 <h2 id="eric-pursley-mission-debrief">Eric Pursley mission debrief</h2>
 <blockquote>
 <p>Excellent work! You&rsquo;ve got the Nmap fundamentals down - that X-ray vision is going to serve you well in future challenges.</p>
@@ -326,8 +326,8 @@ I enjoy being creative and making things. For example, a cybersecurity tool call
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1763902060" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763902060" defer></script>
-    <script src="/js/theme.js?1763902060" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763905880" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763905880" defer></script>
+    <script src="/js/theme.js?1763905880" defer></script>
   </body>
 </html>
