--- a/public/act1/neighborhood-watch-bypass/index.html
+++ b/public/act1/neighborhood-watch-bypass/index.html
@@ -35,26 +35,26 @@ When I’m not fighting fires or hunting vulnerabilities, you’ll find me on a 
     <meta itemprop="wordCount" content="634">
     <title>Neighborhood Watch Bypass :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/neighborhood-watch-bypass/index.xml" rel="alternate" type="application/rss+xml" title="Neighborhood Watch Bypass :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1763902060" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763902060" defer></script>
-    <script src="/js/search-lunr.js?1763902060" defer></script>
-    <script src="/js/search.js?1763902060" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763905880" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763905880" defer></script>
+    <script src="/js/search-lunr.js?1763905880" defer></script>
+    <script src="/js/search.js?1763905880" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763902060";
+      window.relearn.index_js_url="/searchindex.en.js?1763905880";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763902060" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763902060" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763902060" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763902060" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763905880" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763905880" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763905880" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763905880" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763902060" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763902060" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763902060" rel="stylesheet">
-    <link href="/css/theme.css?1763902060" rel="stylesheet">
-    <link href="/css/format-html.css?1763902060" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763905880" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763905880" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763905880" rel="stylesheet">
+    <link href="/css/theme.css?1763905880" rel="stylesheet">
+    <link href="/css/format-html.css?1763905880" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -81,7 +81,7 @@ When I’m not fighting fires or hunting vulnerabilities, you’ll find me on a 
       window.T_No_results_found = `No results found for "{0}"`;
       window.T_N_results_found = `{1} results found for "{0}"`;
       // variant stuff
-      window.relearn.themevariants = [ 'zen-dark' ];
+      window.relearn.themevariants = [ 'hhc-2025' ];
       window.relearn.customvariantname = "my-custom-variant";
       window.relearn.changeVariant = function(variant) {
         var oldVariant = document.documentElement.dataset.rThemeVariant;
@@ -165,8 +165,8 @@ When I’m not fighting fires or hunting vulnerabilities, you’ll find me on a 
 
 <h1 id="neighborhood-watch-bypass">Neighborhood Watch Bypass</h1>
 
-<p><a href="#R-image-3590f8ab3759edc5e44038767954f678" class="lightbox-link"><img alt="Kyle Parrish" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/kyleparrish-avatar.gif" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-3590f8ab3759edc5e44038767954f678"><img alt="Kyle Parrish" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/kyleparrish-avatar.gif"></a></p>
+<p><a href="#R-image-963c5665d0d6688b29dec627e85d3dc1" class="lightbox-link"><img alt="Kyle Parrish" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/kyleparrish-avatar.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-963c5665d0d6688b29dec627e85d3dc1"><img alt="Kyle Parrish" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/kyleparrish-avatar.gif"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Assist Kyle at the old data center with a fire alarm that just won&rsquo;t chill.</p>
@@ -194,27 +194,27 @@ command <code>/etc/firealarm/restore_fire_alarm</code> to restore complete fire 
 protect the Dosis neighborhood from potential emergencies.</p>
 </blockquote>
 <p>The above text is copied from the welcome screen for this terminal (below). As we can see for this terminal there aren&rsquo;t that many tips or hints available. So I instantly begun think we&rsquo;re in a classical situation where we have to look deeper into the terminal to find out more.</p>
-<p><a href="#R-image-f096ee4d55a72a3daedcffce8da99fe5" class="lightbox-link"><img alt="Welcome screen" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firealarm-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f096ee4d55a72a3daedcffce8da99fe5"><img alt="Welcome screen" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firealarm-1.png"></a></p>
+<p><a href="#R-image-a8c6435e4990afa5ebea244cd3be1253" class="lightbox-link"><img alt="Welcome screen" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firealarm-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-a8c6435e4990afa5ebea244cd3be1253"><img alt="Welcome screen" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firealarm-1.png"></a></p>
 <p>Since we have no information, and in such games like this, I usually list out the contents right there at the entrypoint, using command <code>ls -la</code>:</p>
-<p><a href="#R-image-f4dfcf06ca4e3c7daaedebc68e9e2ff9" class="lightbox-link"><img alt="Listing directories" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firealarm-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f4dfcf06ca4e3c7daaedebc68e9e2ff9"><img alt="Listing directories" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firealarm-2.png"></a></p>
+<p><a href="#R-image-1bc225dafe1d32c228f280a207cf1b33" class="lightbox-link"><img alt="Listing directories" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firealarm-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1bc225dafe1d32c228f280a207cf1b33"><img alt="Listing directories" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firealarm-2.png"></a></p>
 <p>Not much in this folder except a <code>bin</code> folder, which tells me that users command most like are meant to run from this. What better to do than to list its contents and try to uncover what lives in this folder?</p>
-<p><a href="#R-image-7b8240e235b0283b33057302d0675084" class="lightbox-link"><img alt="Looking at the bin folder" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firealarm-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-7b8240e235b0283b33057302d0675084"><img alt="Looking at the bin folder" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firealarm-3.png"></a></p>
+<p><a href="#R-image-17d146a487e890cd869ddd2281e50976" class="lightbox-link"><img alt="Looking at the bin folder" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firealarm-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-17d146a487e890cd869ddd2281e50976"><img alt="Looking at the bin folder" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firealarm-3.png"></a></p>
 <p>So, I am not allowed to run that <code>runtoanswer</code> binary? So - yes, that would be my goal here. To find a way to execute it. Tradiotionally on other CTF platform like TryHackMe and Hack The Box we usually list out what <code>sudo</code> permissions this user has (<code>sudo -l</code> to rescue):</p>
-<p><a href="#R-image-782fec5d65bf8e5f5aaf8e5d6686b2fd" class="lightbox-link"><img alt="Sudo rights" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firealarm-4.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-782fec5d65bf8e5f5aaf8e5d6686b2fd"><img alt="Sudo rights" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firealarm-4.png"></a></p>
+<p><a href="#R-image-f41db63b7e5905a3b10b830e759326c8" class="lightbox-link"><img alt="Sudo rights" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firealarm-4.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-f41db63b7e5905a3b10b830e759326c8"><img alt="Sudo rights" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firealarm-4.png"></a></p>
 <p>Okay, this user has the rights to execute a shell script using sudo. Finding out what this shell scripts does:</p>
-<p><a href="#R-image-daf095bda4a45d63b200d060bae413b6" class="lightbox-link"><img alt="Inspecting shell script" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firealarm-5.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-daf095bda4a45d63b200d060bae413b6"><img alt="Inspecting shell script" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firealarm-5.png"></a></p>
+<p><a href="#R-image-5f4c088a077abbc6e0b2326f5a2fd304" class="lightbox-link"><img alt="Inspecting shell script" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firealarm-5.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5f4c088a077abbc6e0b2326f5a2fd304"><img alt="Inspecting shell script" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firealarm-5.png"></a></p>
 <p>How cute. It&rsquo;s a sugary wrapper around some system utilities to list out usage metrics. From the script I see it uses <code>echo</code>, <code>df</code>, <code>free</code>, <code>ps</code>, <code>grep</code>,  and <code>head</code> - all without using full paths! This means I can create my own version of one of them to spawn a Bash shell and gain access as root (toot toot)! I suppose this is why that lonely <code>bin</code> folder even exist (for me to put my copy of a said utility in and execute).</p>
 <p>So my plan is to create my own version of <code>df</code> in the local <code>bin</code> folder, then add a call to Bash into it, assign SUID and Executable flag to it. Then run that SUDO command and hope for the best:</p>
-<p><a href="#R-image-5dac7dbdcf97156c34f42afae13a5f6b" class="lightbox-link"><img alt="Creating a malicious df" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firealarm-6.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5dac7dbdcf97156c34f42afae13a5f6b"><img alt="Creating a malicious df" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firealarm-6.png"></a></p>
+<p><a href="#R-image-a042aa2f1f94ab46d0d6905231cc1e16" class="lightbox-link"><img alt="Creating a malicious df" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firealarm-6.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-a042aa2f1f94ab46d0d6905231cc1e16"><img alt="Creating a malicious df" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firealarm-6.png"></a></p>
 <p>Exuting my malicious <code>df</code> script and hoping for the best! And would you look at that, I got ROOT and can run that <code>runtoanswer</code> binary! Yay!</p>
-<p><a href="#R-image-901ffa02ac5112d033d1c465f192acb3" class="lightbox-link"><img alt="Got ROOT" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firealarm-7.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-901ffa02ac5112d033d1c465f192acb3"><img alt="Got ROOT" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firealarm-7.png"></a></p>
+<p><a href="#R-image-7bb500a0b0746c7de71963429cfba3a4" class="lightbox-link"><img alt="Got ROOT" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-firealarm-7.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-7bb500a0b0746c7de71963429cfba3a4"><img alt="Got ROOT" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-firealarm-7.png"></a></p>
 <h2 id="kyle-parrish-mission-debrief">Kyle Parrish mission debrief</h2>
 <blockquote>
 <p>Wow! Thank you so much! I didn&rsquo;t realize sudo was so powerful. Especially when misconfigured. Who knew a simple privilege escalation could unlock the whole fire safety system?</p>
@@ -299,8 +299,8 @@ protect the Dosis neighborhood from potential emergencies.</p>
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1763902060" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763902060" defer></script>
-    <script src="/js/theme.js?1763902060" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763905880" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763905880" defer></script>
+    <script src="/js/theme.js?1763905880" defer></script>
   </body>
 </html>
