--- a/public/act1/santas-gift-tracking-service-port-mystery/index.html
+++ b/public/act1/santas-gift-tracking-service-port-mystery/index.html
@@ -39,26 +39,26 @@ Think you can check out this terminal for me? I need to use cURL to access the g
     <meta itemprop="wordCount" content="350">
     <title>Santa&#39;s Gift Tracking Service Port Mystery :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/santas-gift-tracking-service-port-mystery/index.xml" rel="alternate" type="application/rss+xml" title="Santa&#39;s Gift Tracking Service Port Mystery :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1763902060" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763902060" defer></script>
-    <script src="/js/search-lunr.js?1763902060" defer></script>
-    <script src="/js/search.js?1763902060" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763905880" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763905880" defer></script>
+    <script src="/js/search-lunr.js?1763905880" defer></script>
+    <script src="/js/search.js?1763905880" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763902060";
+      window.relearn.index_js_url="/searchindex.en.js?1763905880";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763902060" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763902060" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763902060" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763902060" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763905880" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763905880" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763905880" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763905880" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763902060" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763902060" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763902060" rel="stylesheet">
-    <link href="/css/theme.css?1763902060" rel="stylesheet">
-    <link href="/css/format-html.css?1763902060" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763905880" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763905880" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763905880" rel="stylesheet">
+    <link href="/css/theme.css?1763905880" rel="stylesheet">
+    <link href="/css/format-html.css?1763905880" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -85,7 +85,7 @@ Think you can check out this terminal for me? I need to use cURL to access the g
       window.T_No_results_found = `No results found for "{0}"`;
       window.T_N_results_found = `{1} results found for "{0}"`;
       // variant stuff
-      window.relearn.themevariants = [ 'zen-dark' ];
+      window.relearn.themevariants = [ 'hhc-2025' ];
       window.relearn.customvariantname = "my-custom-variant";
       window.relearn.changeVariant = function(variant) {
         var oldVariant = document.documentElement.dataset.rThemeVariant;
@@ -173,8 +173,8 @@ Think you can check out this terminal for me? I need to use cURL to access the g
 
 <h1 id="santas-gift-tracking-service-port-mystery">Santa&#39;s Gift Tracking Service Port Mystery</h1>
 
-<p><a href="#R-image-62444d74cd0c435e635aa6b0c5dc74bf" class="lightbox-link"><img alt="Yori Kvitchko" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/yori-avatar.gif" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-62444d74cd0c435e635aa6b0c5dc74bf"><img alt="Yori Kvitchko" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/yori-avatar.gif"></a></p>
+<p><a href="#R-image-f6b4860711be6a26cda5b6e27935a79b" class="lightbox-link"><img alt="Yori Kvitchko" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/yori-avatar.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-f6b4860711be6a26cda5b6e27935a79b"><img alt="Yori Kvitchko" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/yori-avatar.gif"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Chat with Yori near the apartment building about Santa&rsquo;s mysterious gift tracker and unravel the holiday mystery.</p>
@@ -187,8 +187,8 @@ Think you can check out this terminal for me? I need to use cURL to access the g
 <p>Please see what you can do!</p>
 </blockquote>
 <h2 id="terminal">Terminal</h2>
-<p><a href="#R-image-d6cf9e962da68a6900a1a51a8dcf45c6" class="lightbox-link"><img alt="Welcome screen" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-gift-tracking-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d6cf9e962da68a6900a1a51a8dcf45c6"><img alt="Welcome screen" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-gift-tracking-1.png"></a></p>
+<p><a href="#R-image-2658509113645c68c345e388157d5c08" class="lightbox-link"><img alt="Welcome screen" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-gift-tracking-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-2658509113645c68c345e388157d5c08"><img alt="Welcome screen" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-gift-tracking-1.png"></a></p>
 <p>By listing the home directory we find a <code>README.txt</code> file:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0"><code>Welcome!
 
@@ -208,13 +208,13 @@ Good luck!</code></pre></div>
 <h3 id="finding-listening-port">Finding listening port</h3>
 <p>The tracking application was originally configured to run on port 8080, but doesnt answer. Our objective now is to trace down which port it now listens to.</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>ss -tlnp</span></span></code></pre></div>
-<p><a href="#R-image-2c90fd430595a6485866bf512f847c44" class="lightbox-link"><img alt="Finding listening port" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-gift-tracking-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-2c90fd430595a6485866bf512f847c44"><img alt="Finding listening port" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-gift-tracking-2.png"></a></p>
+<p><a href="#R-image-c4f0c15f8601cc95e406938c6e8db816" class="lightbox-link"><img alt="Finding listening port" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-gift-tracking-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-c4f0c15f8601cc95e406938c6e8db816"><img alt="Finding listening port" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-gift-tracking-2.png"></a></p>
 <p>The listeneing port in question is <code>12321</code>, connecting to it:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>curl http://localhost:12321</span></span></code></pre></div>
 <p>As the original port was a well known web-port, we&rsquo;ll just go ahead connecting using Curl:</p>
-<p><a href="#R-image-9285a2f56806112085ddf2e1e3b9636f" class="lightbox-link"><img alt="Connecting to port" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-gift-tracking-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9285a2f56806112085ddf2e1e3b9636f"><img alt="Connecting to port" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-gift-tracking-3.png"></a></p>
+<p><a href="#R-image-f601b8b4f435de572bd9b736feaf2e94" class="lightbox-link"><img alt="Connecting to port" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-gift-tracking-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-f601b8b4f435de572bd9b736feaf2e94"><img alt="Connecting to port" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-gift-tracking-3.png"></a></p>
 <p>The entire output is included below:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-json" data-lang="json"><span style="display:flex;"><span>{
 </span></span><span style="display:flex;"><span>  <span style="color:#f92672">&#34;status&#34;</span>: <span style="color:#e6db74">&#34;success&#34;</span>,
@@ -335,8 +335,8 @@ Good luck!</code></pre></div>
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1763902060" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763902060" defer></script>
-    <script src="/js/theme.js?1763902060" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763905880" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763905880" defer></script>
+    <script src="/js/theme.js?1763905880" defer></script>
   </body>
 </html>
