--- a/public/search/index.html
+++ b/public/search/index.html
@@ -16,26 +16,26 @@
     <meta property="og:type" content="website">
     <meta itemprop="name" content="Search :: SANS Holiday Hack Challenge 2025">
     <title>Search :: SANS Holiday Hack Challenge 2025</title>
-    <link href="/css/auto-complete/auto-complete.min.css?1763901820" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763901820" defer></script>
-    <script src="/js/search-lunr.js?1763901820" defer></script>
-    <script src="/js/search.js?1763901820" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763903337" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763903337" defer></script>
+    <script src="/js/search-lunr.js?1763903337" defer></script>
+    <script src="/js/search.js?1763903337" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763901820";
+      window.relearn.index_js_url="/searchindex.en.js?1763903337";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763901820" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763901820" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763901820" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763901820" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763903337" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763903337" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763903337" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763903337" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763901820" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763901820" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763901820" rel="stylesheet">
-    <link href="/css/theme.css?1763901820" rel="stylesheet">
-    <link href="/css/format-html.css?1763901820" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763903337" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763903337" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763903337" rel="stylesheet">
+    <link href="/css/theme.css?1763903337" rel="stylesheet">
+    <link href="/css/format-html.css?1763903337" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -62,7 +62,7 @@
       window.T_No_results_found = `No results found for "{0}"`;
       window.T_N_results_found = `{1} results found for "{0}"`;
       // variant stuff
-      window.relearn.themevariants = [ 'zen-dark' ];
+      window.relearn.themevariants = [ 'hhc-2025' ];
       window.relearn.customvariantname = "my-custom-variant";
       window.relearn.changeVariant = function(variant) {
         var oldVariant = document.documentElement.dataset.rThemeVariant;
@@ -217,8 +217,8 @@
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1763901820" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763901820" defer></script>
-    <script src="/js/theme.js?1763901820" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763903337" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763903337" defer></script>
+    <script src="/js/theme.js?1763903337" defer></script>
   </body>
 </html>
